--- a/tex/tikz.tex
+++ b/tex/tikz.tex
@@ -12,6 +12,12 @@ graphics. For example, the code \verb|\tikz \draw (0pt,0pt) -- (20pt,6pt);|
 yields the line \tikz \draw (0pt,0pt) -- (20pt,6pt); and the code \verb|\tikz \fill[orange] (1ex,1ex) circle (1ex);| yields \tikz
 \fill[orange] (1ex,1ex) circle (1ex);.
 
+\begin{figure}[h]
+    \centering
+    \input{./figure/pgf}
+    \caption{\label{fig:exmaple1} 示例图1}
+\end{figure}
+
 In a sense, when you use {\scshape pdf}\ you ``program'' your graphics, just
 as you ``program'' your document when you use \TeX.  You get all
 the advantages of the ``\TeX-approach to typesetting'' for your
@@ -23,3 +29,10 @@ really ``show'' how things will look like.
 
 
 
+
+
+\begin{figure}
+    \centering
+    \input{./figure/process}
+    \caption{\label{fig:exmaple2} 示例流程图2}
+\end{figure}
