--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,24 @@
             pdfborder=0 0 1,
             citecolor=black,
             linkcolor=black}
-\usepackage{tikz}
+
+% 绘图库
+\usepackage{tikz,mathpazo,pgf}
+\usetikzlibrary{shapes.geometric, 
+				arrows,
+				decorations.pathmorphing,
+				backgrounds, 
+				positioning, 
+				fit,
+				petri, 
+				automata}
+ % 流程图定义基本形状
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black, fill=red!30]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=orange!30]
+\tikzstyle{decision} = [diamond, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=green!30]
+\tikzstyle{arrow} = [thick,->,>=stealth]
+
 
 \addbibresource{nkthesis.bib}
 \DeclareBibliographyCategory{cited}
