参考文献格式

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -373,6 +373,7 @@
   \or \renewcommand{\l@section}[2]{}
       \renewcommand{\l@subsection}[2]{}
   \or \renewcommand{\l@subsection}[2]{}
+  \or \renewcommand{\l@subsubsection}[2]{}
   \fi}
 
 
@@ -615,6 +616,7 @@
 \NKT@definekey{论文作者}            {lunwenzuozhe}
 \NKT@definekey{学号}                {xuehao}
 \NKT@definekey{指导教师}            {zhidaojiaoshi}
+\NKT@definekey{指导教师职称}         {zhidaojiaoshizhicheng}
 \NKT@definekey{申请学位}            {shenqingxuewei}
 \NKT@definekey{培养单位}            {peiyangdanwei}
 \NKT@definekey{学科专业}            {xuekezhuanye}
@@ -633,9 +635,10 @@
 \NKT@definekey{专业}                {zhuanye}
 \NKT@definekey{联系电话}            {lianxidianhua}
 \NKT@definekey{Email}               {Email}
-\NKT@definekey{通讯地址(邮编)}      {tongxundizhi}
+\NKT@definekey{通讯地址(邮编)}       {tongxundizhi}
 \NKT@definekey{备注}                {beizhu}
-\NKT@definekey{是否批准为非公开论文}{shifougongkai}
+\NKT@definekey{是否批准为非公开论文}  {shifougongkai}
+\NKT@definekey{非公开论文编号}       {feigongkailunwenbianhao}
 
 \csname CJK@makeActive\endcsname
 
