--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
-%!TEX encoding = UTF-8 Unicode
 %!TEX program = xelatex
+%!TEX encoding = UTF-8 Unicode
 % -*- coding: utf-8 -*-
 %%
 %%
@@ -30,13 +30,22 @@
 
 \usepackage[emptydoublepage]{NKThesis}   % 中文
 %\usepackage[emptydoublepage,English]{NKThesis} % 英文
-
+\usepackage{amssymb}
 %   根据需要选择 biblatex 宏包选项.
-\usepackage[backend = bibtex8, defernumbers = true,  sorting=none,  style = nkthesis]{biblatex}
-\hypersetup{colorlinks=true,
-            pdfborder=0 0 1,
-            citecolor=black,
-            linkcolor=black}
+% \usepackage[backend = bibtex8, defernumbers = true,  sorting=none,  style = nkthesis]{biblatex}
+% \hypersetup{colorlinks=true,
+%             pdfborder=0 0 1,
+%             citecolor=black,
+%             linkcolor=black}
+%   根据需要选择 biblatex 宏包选项.
+% 使用gb7714-2015代替
+% https://github.com/hushidong/biblatex-gb7714-2015
+\usepackage[backend = biber, style = gb7714-2015]{biblatex}
+% 解决url不换行问题
+% https://tex.stackexchange.com/questions/134191/line-breaks-of-long-urls-in-biblatex-bibliography
+\defcounter{biburlnumpenalty}{3000}
+\defcounter{biburlucpenalty}{6000}
+\defcounter{biburllcpenalty}{9000}
 
 % 绘图库
 \usepackage{tikz,mathpazo,pgf}
@@ -89,6 +98,7 @@ resume
 	论文作者       = ,
 	学号           = ,
 	指导教师       = ,
+	指导教师职称    = ,
 	申请学位       = ,
 	培养单位       = ,
 	学科专业       = ,
@@ -98,6 +108,7 @@ resume
 	学校代码       = 10055,
 	密级           = 公开,
 	% 公开 | 限制 | 秘密 | 机密, 若为公开, 不填以下三项
+	非公开论文编号 = ,
 	保密期限       = ,
 	审批表编号     = ,
 	批准日期       = ,
@@ -110,7 +121,8 @@ resume
 	联系电话       = ,
 	Email          = ,
 	通讯地址(邮编) = ,
-	备注           = }
+	备注           = 
+	}
 
 
 \input{./tex/abstract}
