授权书细节修改

--- a/main.tex
+++ b/main.tex
@@ -94,9 +94,9 @@ resume
 \NKTsetup{%
 	论文题目(中文) = 学位论文的标题,
 	副标题        = ——论文的副标题,
-	论文题目(英文) = Title of thia Thesis in English,
+	论文题目(英文) = Title of this Thesis in English,
 	论文作者       = ,
-	学号           = ,
+	学号          = ,
 	指导教师       = ,
 	指导教师职称    = ,
 	申请学位       = ,
@@ -104,23 +104,23 @@ resume
 	学科专业       = ,
 	研究方向       = ,
 	中图分类号     = ,
-	UDC            = ,
-	学校代码       = 10055,
-	密级           = 公开,
+	UDC          = ,
+	学校代码      = 10055,
+	密级          = 公开,
 	% 公开 | 限制 | 秘密 | 机密, 若为公开, 不填以下三项
 	非公开论文编号 = ,
 	保密期限       = ,
 	审批表编号     = ,
 	批准日期       = ,
-	论文完成时间   = 二〇一八年三月,
+	论文完成时间    = 二〇一八年三月,
 	答辩日期       = ,
 	论文类别       = 学历硕士,
 	% 博士 | 学历硕士 | 硕士专业学位 | 高校教师 | 同等学力硕士
 	院/系/所       = ,
 	专业           = ,
-	联系电话       = ,
+	联系电话        = ,
 	Email          = ,
-	通讯地址(邮编) = ,
+	通讯地址(邮编)  = ,
 	备注           = 
 	}
 
