--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \usepackage{ifxetex}
 \ifxetex
   \usepackage[bookmarksnumbered]{hyperref}
+  \usepackage{xeCJK}  
 \else
   \usepackage[unicode,bookmarksnumbered]{hyperref}
 \fi
@@ -87,38 +88,38 @@ resume
 %  设置基本信息
 %  注意:  逗号`,'是项目分隔符. 如果某一项的值出现逗号, 应放在花括号内, 如 {,}
 %
-\NKTsetup{%
-	论文题目(中文) = 学位论文的标题,
-	副标题        = ——论文的副标题,
-	论文题目(英文) = Title of this Thesis in English,
-	论文作者       = ,
-	学号          = ,
-	指导教师       = ,
-	指导教师职称    = ,
-	申请学位       = ,
-	培养单位       = ,
-	学科专业       = ,
-	研究方向       = ,
+\NKTsetup{
+	% 封面设置
+	论文题目(中文) = 我是爱南开的,
+	副标题         = ,
+	论文题目(英文) = I Love Nankai,
+	论文作者       = 周恩来,
+	学号           = 19190062,
+	指导教师       = {张伯苓~教授},
+	申请学位       = 硕士,
+	培养单位       = 南开大学,
+	学科专业       = 文科,
+	研究方向       = 国际政治,
 	中图分类号     = ,
-	UDC          = ,
-	学校代码      = 10055,
-	密级          = 公开,
-	% 公开 | 限制 | 秘密 | 机密, 若为公开, 不填以下三项
+	UDC            = ,
+	学校代码       = 10055,
+	论文完成时间   = 二〇一八年四月,
+	% 保密设置
+	密级           = 公开,	% 公开 | 限制 | 秘密 | 机密, 若为公开, 不填以下三项
 	非公开论文编号 = ,
 	保密期限       = ,
 	审批表编号     = ,
+	% 其他信息
 	批准日期       = ,
-	论文完成时间    = 二〇一八年三月,
 	答辩日期       = ,
-	论文类别       = 学历硕士,
-	% 博士 | 学历硕士 | 硕士专业学位 | 高校教师 | 同等学力硕士
-	院/系/所       = ,
-	专业           = ,
-	联系电话        = ,
-	Email          = ,
-	通讯地址(邮编)  = ,
-	备注           = 
-	}
+	论文类别       = 学历硕士, % 博士 | 学历硕士 | 专业学位硕士 | 同等学力硕士
+	院/系/所       = 文学部,
+	专业           = 文科,
+	联系电话       = 1234567890,
+	Email          = ZhouEnlai@nankai.edu.cn,
+	通讯地址(邮编) = 300000,
+	备注           = {}
+}
 
 
 \input{./tex/abstract}
