--- a/figure/pgf.tex
+++ b/figure/pgf.tex
@@ -1,5 +1,5 @@
-% \usetikzlibrary{arrows, decorations.pathmorphing, backgrounds, positioning, fit, petri, automata}
- 
+% !TeX root = ../main.tex
+
 \definecolor{yellow1}{rgb}{1,0.8,0.2} 
  
 
