--- a/nkthesis.bib
+++ b/nkthesis.bib
@@ -90,18 +90,18 @@
 	userf = {zh},
 }
 
-@customf{Ding,
+@online{Ding,
   addendum={丁光莹. 钢筋混凝土框架结构非线性反应分析的随机模拟分析: [博士学位论文].
   上海：同济大学，2001},
   userf = {zh},
 }
 
-@customf{GB6447-86,
+@online{GB6447-86,
   addendum={全国文献工作标准化技术委员会第六分委员会．GB 6447-86 文摘编写规则．北京：中国标准出版社，1986},
   userf = {zh},
 }
 
-@customf{Example,
+@online{Example,
   addendum={ Nadkarni M A, Nair C K K, Pandey V N, et al．
   Characterzation of alpha-galactosidase from corynebacterium murisepticum and mechanism of its induction.
    J Gen App Microbiol，1992，38：223 $\sim$ 234 },
