--- a/main.tex
+++ b/main.tex
@@ -6,13 +6,18 @@
 %%
 %%  本模板方式编译: XeLaTeX + biber
 %%
-%%  注意： 在改变编译方式前应先删除 *.toc 和 *.aux 文件，
+%%  注意: 在改变编译方式前应先删除 *.toc 和 *.aux 文件
 %%
 \documentclass[12pt,openright]{book}
 
 % 引入NKThesis包
 \usepackage[emptydoublepage]{NKThesis}   % 中文
 %\usepackage[emptydoublepage,English]{NKThesis} % 英文
+
+% 其它包按需添加
+% \usepackage{amsmath}
+% \usepackage{cases}
+% \usepackage{multirow}
 
 % 参考文献
 \addbibresource{nkthesis.bib}
